Fix some inks, edehont++

--- a/Type/IO/Socket/Async.pod
+++ b/Type/IO/Socket/Async.pod
@@ -127,7 +127,7 @@ sent or broken if there was an error sending.
 
 This is the equivalent of C<print> for UDP sockets that have been created with
 the C<udp> method, it will try send a UDP message of C<$str> to the specified
-C<$host> and C<$port> returning a L<Promise|/Type/Promise> that will be kept
+C<$host> and C<$port> returning a L<Promise|/type/Promise> that will be kept
 when the data is successfully sent or broken if it was unable to send the
 data. In order to send to a broadcast address the C<:broadcast> flag must
 have been specified when the socket was created.
@@ -147,8 +147,8 @@ sent or broken if there was an error sending.
 
 This is the equivalent of C<write> for UDP sockets that have been created
 with the C<udp> method, it will try send a UDP message comprised of
-the bytes in the L<Blob|/Types/Blob>  C<$b> to the specified C<$host>
-and C<$port> returning a L<Promise|/Type/Promise> that will be kept
+the bytes in the L<Blob|/types/Blob>  C<$b> to the specified C<$host>
+and C<$port> returning a L<Promise|/type/Promise> that will be kept
 when the data is successfully sent or broken if it was unable to send
 the data. In order to send to a broadcast address the C<:broadcast>
 flag must have been specified when the socket was created.
@@ -160,7 +160,7 @@ flag must have been specified when the socket was created.
 Returns a L<Supply> which can be tapped to obtain the data read from
 the connected L<IO::Socket::Async> as it arrives.  By default the data
 will be emitted as characters, but if the C<:bin> adverb is provided a
-L<Buf|/Type/Buf> of bytes will be emitted instead, optionally in this
+L<Buf|/type/Buf> of bytes will be emitted instead, optionally in this
 case you can provide your own C<Buf> with the C<:buf> named parameter.
 
 =head2 method close
