--- a/Type/Supplier.pod
+++ b/Type/Supplier.pod
@@ -2,11 +2,11 @@
 
 =TITLE class Supplier
 
-=SUBTITLE Live L<Supply|/doc/Type/Supply> factory
+=SUBTITLE Live L<Supply|/type/Supply> factory
 
     class Supplier { ... }
 
-This is a factory for I<live> L<Supply|/doc/Type/Supply> objects, which
+This is a factory for I<live> L<Supply|/type/Supply> objects, which
 provides the mechanism for emitting new values onto the supplies:
 
 	my $supplier = Supplier.new;
