Fix another link

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -28,7 +28,7 @@ C<Supply.interval> produces a fresh timer with the appropriate interval each
 time it is tapped. If the tap is closed, the timer simply stops emitting values
 to that tap.
 
-A C<live> C<Supply> is obtained from the L<Supplier|/doc/type/Supplier>
+A C<live> C<Supply> is obtained from the L<Supplier|/type/Supplier>
 factory method C<Supply>.  New values are emitted by calling C<emit> on
 the C<Supplier> object.
 
