--- a/Type/IO.pod
+++ b/Type/IO.pod
@@ -116,6 +116,13 @@ force it to dump everything passed to it.
 
     dd \((:a(1), :b(2)), :c(3));
 
+If you don't specify any parameters at all, it will just print the type and
+name of the current subroutine / method to the standard error stream:
+
+    sub a { dd }; a    # sub a
+
+This can be handy as a cheap trace function.
+
 =head2 sub prompt
 
     sub prompt($msg)
