mention doc-dir for modules

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -310,6 +310,9 @@ To share your module, do the following:
         |-- lib
         |   `-- Vortex
         |       `-- TotalPerspective.pm
+        |-- doc
+        |   `-- Vortex
+        |       `-- TotalPerspective.pod6
         |-- LICENSE
         |-- META.info
         |-- README.md
