list codes as one alternative to 'length'

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -129,7 +129,8 @@ string, and C<NaN> for non-numeric characters.
 
 =head2 method length
 
-Perl 6 does not have a C<length> function.  See L<chars> or L<elems>.
+Perl 6 does not have a C<length> function.  See L<chars>, L<elems>,
+ or L<codes>.
 
 =head2 routine chars
 
