--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -62,6 +62,45 @@ To handle all exceptions use a C<default> statement.
         }
    }
 
+=head2 C<try> blocks
+
+To contain an exception use a C<try> block. Any exception that is thrown in
+such a block will be caught by the implicit C<CATCH> block or a C<CATCH> block
+provided by the user. In the latter case, any exception not handled will be 
+rethrown.
+    
+    class E is Exception { method message() { "Just stop already!" } }
+
+    try {
+        E.throw.new; # this will be local
+        
+        say "This won't be said.";
+    }
+
+    say "I'm alive!";
+
+    try {
+        CATCH {
+            when X::AdHoc { .Str.say; .resume }
+        }
+
+        die "No, I expect you to DIE Mr. Bond!";
+
+        say "I'm immortal.";
+
+        E.new.throw;
+
+        say "No, you don't!";
+    }
+
+Output:
+
+    I'm alive!
+    No, I expect you die DIE Mr. Bond!
+    I'm immortal.
+    Just stop already!
+      in block <unit> at exception.p6 line 21
+
 =head2 Throwing exceptions
 
 One can also explicitly throw exceptions via the C<.throw> method on an
