doc handling of LoLs with hyper operators

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -248,6 +248,12 @@ Hyper operators can take user defined operators as its operator argument.
 
     # OUTPUT: «10 EB 4 EB 2 PB 5 PB 0.5 PB 4 TB 300 GB 4.5 GB 50 MB 200 MB 9 KB 0.6 MB»
 
+Hyper operators do not descent into child lists. You can chain hyper operators
+to destructure a List of Lists.
+
+    my $neighbors = ((-1, 0), (0, -1), (0, 1), (1, 0));
+    my $p = (2,3); 
+    say $neighbors »>>+<<» ($p, *); # ((1 3) (2 2) (2 4) (3 3))
 
 =head2 Reduction Operators
 
