doc resuming of exceptions

--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -150,6 +150,20 @@ C<throw> can be viewed as the method form of C<die>, just that in this
 particular case, the sub and method forms of the routine have different
 names.
 
+=head2 Resuming of Exceptions
+
+Exceptions interrupt control flow and divert it away from the statement
+following the statement that threw it. Any exception handled by the
+user can be resumed and control flow will continue with the statement
+following the statement that threw the exception. To do so call the
+method C<.resume> on the exception object.
+
+    CATCH { when X::AdHoc { .resume } } # this is step 2
+
+    die "We leave control after this."; # this is step 1
+
+    say "We have continued with control flow."; # this is step 3
+
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
