--- a/Type/Exception.pod
+++ b/Type/Exception.pod
@@ -63,6 +63,18 @@ Usage:
 
 Throws the exception.
 
+=head2 method resume
+
+Resumes control flow where C<.throw> left it when handled in a C<CATCH> block.
+
+Defined as:
+
+    method resume(Exception:D:)
+
+Usage:
+
+    CATCH { default { .resume } }
+
 =head2 method rethrow
 
 Defined as:
