--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -293,9 +293,11 @@ one left, one right, from it's arguments. The resulting list is returned.
     my @l = <a b c> Z~ 1,2,3; # [a1 b2 c3]
     
 If one of the operands runs out of elements prematurely, the zip operator will
-stop. An infinite list can be used to repeat elements.
+stop. An infinite list can be used to repeat elements. A list with a final 
+element of C<*> will repeat it's 2nd last element indefinitely.
 
-    my @l = <a b c d> Z~ ':' xx *; [a: b: c: d:] 
+    my @l = <a b c d> Z~ ':' xx *; # <a: b: c: d:> 
+    my @l = <a b c d> Z~ 1, 2, *;  # <a1 b2 c2 d2>
 
 =head2 Sequential Operators
 
