Clarify language and narrow an unitentionally wide C<>

--- a/Type/Scalar.pod
+++ b/Type/Scalar.pod
@@ -15,7 +15,7 @@ certain places where it is important to note the presence of C<Scalar>s.
 
 When a value is assigned to a C<$>-sigiled variable, the variable will
 actually bind to a C<Scalar>, which in turn will bind to the value.
-When a C<Scalar> is assigned to a C<$-sigiled> variable, the value
+When a C<Scalar> is assigned to a C<$>-sigiled variable, the value
 bound to by that C<Scalar> will be bound to the C<Scalar> which that
 variable was bound to (a new one will be created if necessary.)
 
@@ -52,7 +52,7 @@ Array elements may be bound directly to values using C<:=> as well,
 however this is to be discouraged as it may lead to confusion.
 Doing so will break exact round-tripping of C<.perl> output -- since
 C<Array>s are assumed to place C<Scalar>s around each element,
-C<Scalar>s are not denoted with C<$> in the output of C<.perl> methods.
+C<Scalar>s are not denoted with C<$> in the output of C<Array.perl>.
 
     [1,$(2,3)].perl.say      # says [1, (2, 3)]
     (1,$(2,3)).perl.say      # says (1, $(2, 3))
