Emphasize actual code point values of set ops

--- a/Language/setbagmix.pod
+++ b/Language/setbagmix.pod
@@ -100,15 +100,15 @@ only C<Set> arguments.
 
 Returns C<True> if C<$a> is an B<element> of C<$b>.
 
-=head4 infix ∈
+=head4 infix ∈ (U+2208 ELEMENT OF)
 
-    only sub infix:<<"\x2208">>($a, $b --> Bool)
+    only sub infix:<<"∈">>($a, $b --> Bool)
 
 Equivalent to L«(elem)».
 
-=head4 infix ∉
+=head4 infix ∉ (U+2209 NOT AN ELEMENT OF)
 
-    only sub infix:<<"\x2209">>($a, $b --> Bool)
+    only sub infix:<<"∉">>($a, $b --> Bool)
 
 Equivalent to C<!(elem)>, i.e., returns C<True> if C<$a> is not an element
 of C<$b>.
@@ -120,15 +120,15 @@ of C<$b>.
 
 Returns C<True> if C<$a> B<contains> C<$b> as an element.
 
-=head4 infix ∋
+=head4 infix ∋ (U+220B CONTAINS AS MEMBER)
 
-    only sub infix:<<"\x220B">>($a, $b --> Bool)
+    only sub infix:<<"∋">>($a, $b --> Bool)
 
 Equivalent to L«(cont)».
 
-=head4 infix ∌
+=head4 infix ∌ (U+220C DOES NOT CONTAIN AS MEMBER)
 
-    only sub infix:<<"\x220C">>($a, $b --> Bool)
+    only sub infix:<<"∌">>($a, $b --> Bool)
 
 Equivalent to C<!(cont)>, i.e., returns C<True> if C<$a> does not contain
 C<$b>.
@@ -142,15 +142,15 @@ Returns C<True> if C<$a> is a B<subset> or is equal to C<$b>, i.e., if all
 the elements of C<$a> are elements of C<$b> and C<$a> is a smaller or equal
 sized set than C<$b>.
 
-=head4 infix ⊆
+=head4 infix ⊆ (U+2286 SUBSET OF OR EQUAL TO)
 
-    only sub infix:<<"\x2286">>($a, $b --> Bool)
+    only sub infix:<<"⊆">>($a, $b --> Bool)
 
 Equivalent to L«(<=)».
 
-=head4 infix ⊈
+=head4 infix ⊈ U+2288 NEITHER A SUBSET OF NOR EQUAL TO
 
-    only sub infix:<<"\x2288">>($a, $b --> Bool)
+    only sub infix:<<"⊈">>($a, $b --> Bool)
 
 Equivalent to C«!(<=)».
 
@@ -163,15 +163,15 @@ Returns C<True> if C<$a> is a B<strict subset> of C<$b>, i.e., that all the
 elements of C<$a> are elements of C<$b> but C<$a> is a smaller set than
 C<$b>.
 
-=head4 infix ⊂
+=head4 infix ⊂ (U+2282 SUBSET OF)
 
-    only sub infix:<<"\x2282">>($a, $b --> Bool)
+    only sub infix:<<"⊂">>($a, $b --> Bool)
 
 Equivalent to L«(<)».
 
-=head4 infix ⊄
+=head4 infix ⊄ (U+2284 NOT A SUBSET OF)
 
-    only sub infix:<<"\x2284">>($a, $b --> Bool)
+    only sub infix:<<"⊄">>($a, $b --> Bool)
 
 Equivalent to C«!(<)».
 
@@ -183,15 +183,15 @@ Equivalent to C«!(<)».
 Like L«(<=)» with reversed arguments. Returns C<True> if C<$a> is a
 B<superset> of or equal to C<$b>.
 
-=head4 infix ⊇
+=head4 infix ⊇ (U+2287 SUPERSET OF OR EQUAL TO)
 
-    only sub infix:<<"\x2287">>($a, $b --> Bool)
+    only sub infix:<<"⊇">>($a, $b --> Bool)
 
 Equivalent to L«(>=)».
 
-=head4 infix ⊉
+=head4 infix ⊉ (U+2289 NEITHER A SUPERSET OF NOR EQUAL TO)
 
-    only sub infix:<<"\x2289">>($a, $b --> Bool)
+    only sub infix:<<"⊉">>($a, $b --> Bool)
 
 Equivalent to C«!(>=)».
 
@@ -203,15 +203,15 @@ Equivalent to C«!(>=)».
 Like L«(<)» with reversed arguments. Returns C<True> if C<$a> is a
 B<strict superset> of C<$b>.
 
-=head4 infix ⊃
+=head4 infix ⊃ (U+2283 SUPERSET OF)
 
-    only sub infix:<<"\x2283">>($a, $b --> Bool)
+    only sub infix:<<"⊃">>($a, $b --> Bool)
 
 Equivalent to L«(>)».
 
-=head4 infix ⊅
+=head4 infix ⊅ (U+2285 NOT A SUPERSET OF)
 
-    only sub infix:<<"\x2285">>($a, $b --> Bool)
+    only sub infix:<<"⊅">>($a, $b --> Bool)
 
 Equivalent to C«!(>)».
 
@@ -224,9 +224,9 @@ Returns C<True> if C<$a> is a Baggy B<subset> of C<$b>, i.e., if all the
 elements of C<$a> are in C<$b> and each element of C<$b> is weighed at
 least as heavily as the element is in C<$a>.
 
-=head4 infix ≼
+=head4 infix ≼ (U+227C PRECEDES OR EQUAL TO)
 
-    only sub infix:<<"\x227C">>($a, $b --> Bool)
+    only sub infix:<<"≼">>($a, $b --> Bool)
 
 Equivalent to L«(<+)».
 
@@ -239,9 +239,9 @@ Returns C<True> if C<$a> is a Baggy B<superset> of C<$b>, i.e., if all the
 elements of C<$b> are in C<$a> and no element of C<$b> is weighted heavier
 than that element is in C<$a>.
 
-=head4 infix ≽
+=head4 infix ≽ (U+227D SUCCEEDS OR EQUAL TO)
 
-    only sub infix:<<"\x227D">>($a, $b --> Bool)
+    only sub infix:<<"≽">>($a, $b --> Bool)
 
 Equivalent to L«(+>)».
 
@@ -262,9 +262,9 @@ appeared for that element.
 
     bag(<a a b c a>) (|) bag(<a a b c c>) === bag(<a a a b c c>)
 
-=head4 infix ∪
+=head4 infix ∪ (U+222A UNION)
 
-    only sub infix:<<"\x222A">>(|p)
+    only sub infix:<<"∪">>(|p)
 
 Equivalent to L«(V<|>)».
 
@@ -284,9 +284,9 @@ is the minimum of the weights of that element over all arguments).
 
     bag(<a a b c a>) (&) bag(<a a b c c>) === bag(<a a b c>)
 
-=head4 infix ∩
+=head4 infix ∩ (U+2229 INTERSECTION)
 
-    only sub infix:<<"\x2229">>(|p)
+    only sub infix:<<"∩">>(|p)
 
 Equivalent to L«(&)».
 
@@ -322,9 +322,9 @@ made up of all the elements that C<$a> has but C<$b> doesn't and all the
 elements C<$b> has but C<$a> doesn't. Equivalent to C<($a ∖ $b) ∪ ($b ∖
 $a)>.
 
-=head4 infix ⊖
+=head4 infix ⊖ (U+2296 CIRCLED MINUS)
 
-    only sub infix:<<"\x2296">>($a, $b --> Setty)
+    only sub infix:<<"⊖">>($a, $b --> Setty)
 
 Equivalent to L«(^)».
 
@@ -339,9 +339,9 @@ across the arguments multiplied together to get the new weight.
     <a b c> (.) <a b c d> === bag <a b c> # Since 1 * 0 == 0, in the case of 'd'
     bag(<a a b c a d>) (.) bag(<a a b c c>) === bag(<a a a a a a b c c>)
 
-=head4 infix ⊍
+=head4 infix ⊍ (U+228D MULTISET MULTIPLICATION)
 
-    only sub infix:<<"\x228D">>(|p)
+    only sub infix:<<"⊍">>(|p)
 
 Equivalent to L«(.)».
 
@@ -356,9 +356,9 @@ arguments added together to get the new weight.
     bag(<a a b c a d>) (.) bag(<a a b c c>) === bag(<a a a a a b b c c c d>)
 
 
-=head4 infix ⊎
+=head4 infix ⊎ (U+228E MULTISET UNION)
 
-    only sub infix:<<"\x228E">>(|p)
+    only sub infix:<<"⊎">>(|p)
 
 Equivalent to L«(+)».
 
