The codepoint in the header rendered way too ugly
So move the actual codepoint information to the text.

--- a/Language/setbagmix.pod
+++ b/Language/setbagmix.pod
@@ -100,18 +100,18 @@ only C<Set> arguments.
 
 Returns C<True> if C<$a> is an B<element> of C<$b>.
 
-=head4 infix ∈ (U+2208 ELEMENT OF)
+=head4 infix ∈
 
     only sub infix:<<"∈">>($a, $b --> Bool)
 
-Equivalent to L«(elem)».
+Equivalent to L«(elem)», at codepoint U+2208 (ELEMENT OF).
 
-=head4 infix ∉ (U+2209 NOT AN ELEMENT OF)
+=head4 infix ∉
 
     only sub infix:<<"∉">>($a, $b --> Bool)
 
 Equivalent to C<!(elem)>, i.e., returns C<True> if C<$a> is not an element
-of C<$b>.
+of C<$b>, at codepoint U+2209 (NOT AN ELEMENT OF).
 
 =head3 infix (cont)
 
@@ -120,18 +120,18 @@ of C<$b>.
 
 Returns C<True> if C<$a> B<contains> C<$b> as an element.
 
-=head4 infix ∋ (U+220B CONTAINS AS MEMBER)
+=head4 infix ∋
 
     only sub infix:<<"∋">>($a, $b --> Bool)
 
-Equivalent to L«(cont)».
+Equivalent to L«(cont)», at codepoint U+220B (CONTAINS AS MEMBER).
 
-=head4 infix ∌ (U+220C DOES NOT CONTAIN AS MEMBER)
+=head4 infix ∌
 
     only sub infix:<<"∌">>($a, $b --> Bool)
 
 Equivalent to C<!(cont)>, i.e., returns C<True> if C<$a> does not contain
-C<$b>.
+C<$b>, at codepoint U+220C (DOES NOT CONTAIN AS MEMBER).
 
 =head3 infix (<=)
 
@@ -142,17 +142,17 @@ Returns C<True> if C<$a> is a B<subset> or is equal to C<$b>, i.e., if all
 the elements of C<$a> are elements of C<$b> and C<$a> is a smaller or equal
 sized set than C<$b>.
 
-=head4 infix ⊆ (U+2286 SUBSET OF OR EQUAL TO)
+=head4 infix ⊆
 
     only sub infix:<<"⊆">>($a, $b --> Bool)
 
-Equivalent to L«(<=)».
+Equivalent to L«(<=)», at codepoint U+2286 (SUBSET OF OR EQUAL TO).
 
-=head4 infix ⊈ U+2288 NEITHER A SUBSET OF NOR EQUAL TO
+=head4 infix ⊈
 
     only sub infix:<<"⊈">>($a, $b --> Bool)
 
-Equivalent to C«!(<=)».
+Equivalent to C«!(<=)», at codepoint U+2288 (NEITHER A SUBSET OF NOR EQUAL TO).
 
 =head3 infix (<)
 
@@ -163,17 +163,17 @@ Returns C<True> if C<$a> is a B<strict subset> of C<$b>, i.e., that all the
 elements of C<$a> are elements of C<$b> but C<$a> is a smaller set than
 C<$b>.
 
-=head4 infix ⊂ (U+2282 SUBSET OF)
+=head4 infix ⊂
 
     only sub infix:<<"⊂">>($a, $b --> Bool)
 
-Equivalent to L«(<)».
+Equivalent to L«(<)», at codepoint U+2282 (SUBSET OF).
 
-=head4 infix ⊄ (U+2284 NOT A SUBSET OF)
+=head4 infix ⊄
 
     only sub infix:<<"⊄">>($a, $b --> Bool)
 
-Equivalent to C«!(<)».
+Equivalent to C«!(<)», at codepoint U+2284 (NOT A SUBSET OF).
 
 =head3 infix (>=)
 
@@ -183,17 +183,18 @@ Equivalent to C«!(<)».
 Like L«(<=)» with reversed arguments. Returns C<True> if C<$a> is a
 B<superset> of or equal to C<$b>.
 
-=head4 infix ⊇ (U+2287 SUPERSET OF OR EQUAL TO)
+=head4 infix ⊇
 
     only sub infix:<<"⊇">>($a, $b --> Bool)
 
-Equivalent to L«(>=)».
+Equivalent to L«(>=)», at codepoint U+2287 (SUPERSET OF OR EQUAL TO).
 
-=head4 infix ⊉ (U+2289 NEITHER A SUPERSET OF NOR EQUAL TO)
+=head4 infix ⊉
 
     only sub infix:<<"⊉">>($a, $b --> Bool)
 
-Equivalent to C«!(>=)».
+Equivalent to C«!(>=)», at codepoint U+2289 (NEITHER A SUPERSET OF
+NOR EQUAL TO).
 
 =head3 infix (>)
 
@@ -203,17 +204,17 @@ Equivalent to C«!(>=)».
 Like L«(<)» with reversed arguments. Returns C<True> if C<$a> is a
 B<strict superset> of C<$b>.
 
-=head4 infix ⊃ (U+2283 SUPERSET OF)
+=head4 infix ⊃
 
     only sub infix:<<"⊃">>($a, $b --> Bool)
 
-Equivalent to L«(>)».
+Equivalent to L«(>)», at codepoint U+2283 (SUPERSET OF).
 
-=head4 infix ⊅ (U+2285 NOT A SUPERSET OF)
+=head4 infix ⊅
 
     only sub infix:<<"⊅">>($a, $b --> Bool)
 
-Equivalent to C«!(>)».
+Equivalent to C«!(>)», at codepoint U+2285 (NOT A SUPERSET OF).
 
 =head3 infix (<+)
 
@@ -224,11 +225,11 @@ Returns C<True> if C<$a> is a Baggy B<subset> of C<$b>, i.e., if all the
 elements of C<$a> are in C<$b> and each element of C<$b> is weighed at
 least as heavily as the element is in C<$a>.
 
-=head4 infix ≼ (U+227C PRECEDES OR EQUAL TO)
+=head4 infix ≼
 
     only sub infix:<<"≼">>($a, $b --> Bool)
 
-Equivalent to L«(<+)».
+Equivalent to L«(<+)», at codepoint U+227C (PRECEDES OR EQUAL TO).
 
 =head3 infix (>+)
 
@@ -239,11 +240,11 @@ Returns C<True> if C<$a> is a Baggy B<superset> of C<$b>, i.e., if all the
 elements of C<$b> are in C<$a> and no element of C<$b> is weighted heavier
 than that element is in C<$a>.
 
-=head4 infix ≽ (U+227D SUCCEEDS OR EQUAL TO)
+=head4 infix ≽
 
     only sub infix:<<"≽">>($a, $b --> Bool)
 
-Equivalent to L«(+>)».
+Equivalent to L«(+>)», at codepoint U+227D (SUCCEEDS OR EQUAL TO).
 
 =head2 Operators that return C<Set> or C<Bag>
 
@@ -262,11 +263,11 @@ appeared for that element.
 
     bag(<a a b c a>) (|) bag(<a a b c c>) === bag(<a a a b c c>)
 
-=head4 infix ∪ (U+222A UNION)
+=head4 infix ∪
 
     only sub infix:<<"∪">>(|p)
 
-Equivalent to L«(V<|>)».
+Equivalent to L«(V<|>)», at codepoint U+222A (UNION).
 
 =head3 infix (&)
 
@@ -284,11 +285,11 @@ is the minimum of the weights of that element over all arguments).
 
     bag(<a a b c a>) (&) bag(<a a b c c>) === bag(<a a b c>)
 
-=head4 infix ∩ (U+2229 INTERSECTION)
+=head4 infix ∩
 
     only sub infix:<<"∩">>(|p)
 
-Equivalent to L«(&)».
+Equivalent to L«(&)», at codepoint U+2229 (INTERSECTION).
 
 =head3 infix (-)
 
@@ -322,11 +323,11 @@ made up of all the elements that C<$a> has but C<$b> doesn't and all the
 elements C<$b> has but C<$a> doesn't. Equivalent to C<($a ∖ $b) ∪ ($b ∖
 $a)>.
 
-=head4 infix ⊖ (U+2296 CIRCLED MINUS)
+=head4 infix ⊖
 
     only sub infix:<<"⊖">>($a, $b --> Setty)
 
-Equivalent to L«(^)».
+Equivalent to L«(^)», at codepoint U+2296 (CIRCLED MINUS).
 
 =head3 infix (.)
 
@@ -339,11 +340,11 @@ across the arguments multiplied together to get the new weight.
     <a b c> (.) <a b c d> === bag <a b c> # Since 1 * 0 == 0, in the case of 'd'
     bag(<a a b c a d>) (.) bag(<a a b c c>) === bag(<a a a a a a b c c>)
 
-=head4 infix ⊍ (U+228D MULTISET MULTIPLICATION)
+=head4 infix ⊍
 
     only sub infix:<<"⊍">>(|p)
 
-Equivalent to L«(.)».
+Equivalent to L«(.)», at codepoint U+228D (MULTISET MULTIPLICATION).
 
 =head3 infix (+)
 
@@ -356,10 +357,10 @@ arguments added together to get the new weight.
     bag(<a a b c a d>) (.) bag(<a a b c c>) === bag(<a a a a a b b c c c d>)
 
 
-=head4 infix ⊎ (U+228E MULTISET UNION)
+=head4 infix ⊎
 
     only sub infix:<<"⊎">>(|p)
 
-Equivalent to L«(+)».
+Equivalent to L«(+)», at codepoint U+228E (MULTISET UNION).
 
 =end pod
