--- a/Language/setbagmix.pod
+++ b/Language/setbagmix.pod
@@ -363,4 +363,8 @@ arguments added together to get the new weight.
 
 Equivalent to L«(+)», at codepoint U+228E (MULTISET UNION).
 
+=head4 term ∅
+
+Equivalent to set(), aka the empty set, at codepoint U+2205 (EMPTY SET).
+
 =end pod
