Add some examples of method invocation

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -500,6 +500,11 @@ See L<functions|/language/functions>.
     my @functions = ({say 1}, {say 2}, {say 3});
     @functions>>.();
 
+    # Method invocation. Object (instance) is $person, method is set-name-age
+    $person.set-name-age('jane', 98);  # Most common way
+    $person.set-name: 'jane', 98;      # Precedence drop
+    set-name($person: 'jane', 98);     # Invocant marker
+
 =head1 Operators
 
 See L<Operators|/language/operators> for lots of details.
