Explain why hash keys need to be quoted

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -239,6 +239,9 @@ Be careful to quote the keys in the last two methods, as these have no effect:
     %h.push(e => 6);
     push %h, f => 7;
 
+because they are interpreted as named arguments to C<push>, not positional
+arguments.
+
 Also note that push can be used as a replacement for assignment during hash
 initialization very useful ways. Take for instance the case of an inverted
 index:
