better example for LABELs

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -682,16 +682,14 @@ All these forms may produce a return value the same way C<loop> does.
 =head2 LABELs
 
 C<while>, C<until>, and C<for> loops can all take a label, which can be
-used to identify them for C<next>, C<last>, and C<redo>. For instance:
+used to identify them for C<next>, C<last>, and C<redo>. Nested loops are 
+supported, for instance:
 
-=begin code
-
-LINE: for $*IN.lines -> $line {
-    last LINE if $line ~~ /^$/;      # exit when done with header
-    ...
-}
-
-=end code
+    OUTAHERE: while True {
+        for lines() -> $line {
+            last OUTAHERE if $line ~~ /^$/;
+        }
+    }
 
 =head2 X<next|control flow>
 
